new tests and benchmarks added